--- a/src/Home.css
+++ b/src/Home.css
@@ -5,7 +5,7 @@
     overflow-x: hidden;
     overflow-y: hidden;
     position: absolute;
-    background-image: url('./assets/futuristic-half-robot-tiger-nature.jpg');
+    background-image: url('./assets/futuristic-half-robot-tiger-nature.webp');
     background-size: cover;
     background-repeat: no-repeat;
 }
